// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`All States 1`] = `
<div data-size="auto">
  <div>
    <div>
      <div>
        <button
          data-state="idle"
          data-variant="info"
        >
          <div>
          </div>
          Steg
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="default"
        >
          <div>
          </div>
          Steg
        </button>
        <button
          data-state="completed"
          data-variant="default"
        >
          <div>
          </div>
          Steg
        </button>
        <button
          aria-invalid="true"
          data-state="invalid"
          data-variant="default"
        >
          <div>
          </div>
          Steg
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="info"
        >
          <div>
          </div>
          Infoside
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="info"
        >
          <div>
          </div>
          Infoside
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="summary"
        >
          <div>
          </div>
          Oppsummering
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="summary"
        >
          <div>
          </div>
          Oppsummering
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="confirmation"
        >
          <div>
          </div>
          Kvittering
        </button>
        <button
          aria-current="step"
          data-state="active"
          data-variant="confirmation"
        >
          <div>
          </div>
          Kvittering
        </button>
      </div>
    </div>
    <div>
      <div>
        <details
          data-state="idle"
          open
        >
          <summary>
            <span>
              Seksjon
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details
          data-state="idle"
          open
        >
          <summary>
            <span>
              Seksjon
            </span>
          </summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details
          data-state="completed"
          open
        >
          <summary>
            <span>
              Seksjon
            </span>
          </summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details
          data-state="invalid"
          open
        >
          <summary aria-invalid="true">
            <span>
              Seksjon
            </span>
          </summary>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details
          data-state="invalid"
          open
        >
          <summary aria-invalid="true">
            <span>
              Seksjon
            </span>
          </summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
    </div>
    <div>
      <div>
        <details data-state="idle">
          <summary>
            <span>
              Seksjon
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details data-state="completed">
          <summary>
            <span>
              Seksjon
            </span>
          </summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details data-state="invalid">
          <summary aria-invalid="true">
            <span>
              Seksjon
            </span>
          </summary>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details
          data-active-step-label="Første steg"
          data-state="idle"
        >
          <summary>
            <span>
              Seksjon
            </span>
          </summary>
          <button
            aria-current="step"
            data-state="active"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details
          data-active-step-label="Første steg"
          data-state="completed"
        >
          <summary>
            <span>
              Seksjon
            </span>
          </summary>
          <button
            aria-current="step"
            data-state="active"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
      <div>
        <details
          data-active-step-label="Første steg"
          data-state="invalid"
        >
          <summary aria-invalid="true">
            <span>
              Seksjon
            </span>
          </summary>
          <button
            aria-current="step"
            data-state="active"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            aria-invalid="true"
            data-state="invalid"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`Full 1`] = `
<div data-size="auto">
  <div>
    <div>
      <div>
        <details
          data-active-step-label="Første steg"
          data-state="idle"
          open
        >
          <summary>
            <span>
              Første seksjon
            </span>
          </summary>
          <button
            aria-current="step"
            data-state="active"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
        </details>
        <details
          data-state="idle"
          open
        >
          <summary>
            <span>
              Andre seksjon
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
        </details>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </div>
    </div>
    <div>
      <div>
        <button
          aria-haspopup="dialog"
          command="show-modal"
          commandfor="_r_1_"
          data-color="neutral"
          data-variant="secondary"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
              fill="currentColor"
              fill-rule="evenodd"
            >
            </path>
          </svg>
          Naviger
        </button>
        <dialog
          closedby="any"
          data-placement="center"
          id="<removed>"
          style="width: fit-content; min-width: 20rem;"
        >
          <button
            aria-label="Lukk dialogvindu"
            command="close"
            commandfor="_r_1_"
            data-color="neutral"
            data-icon="true"
            data-variant="tertiary"
            type="button"
          >
          </button>
          <h2>
            Naviger
          </h2>
          <div>
            <details
              data-active-step-label="Første steg"
              data-state="idle"
              open
            >
              <summary>
                <span>
                  Første seksjon
                </span>
              </summary>
              <button
                aria-current="step"
                data-state="active"
                data-variant="default"
              >
                <div>
                </div>
                Første steg
              </button>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Andre steg
              </button>
            </details>
            <details
              data-state="idle"
              open
            >
              <summary>
                <span>
                  Andre seksjon
                </span>
              </summary>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Første steg
              </button>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Andre steg
              </button>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Tredje steg
              </button>
            </details>
            <button
              data-state="idle"
              data-variant="submission"
            >
              <div>
              </div>
              Innsending
            </button>
            <button
              data-state="idle"
              data-variant="confirmation"
              disabled
            >
              <div>
              </div>
              Kvittering
            </button>
          </div>
        </dialog>
      </div>
      <h2 data-size="sm">
        Første seksjon
      </h2>
      <form>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Første spørsmål
          </label>
          <div>
            <input
              aria-invalid="false"
              id="<removed>"
              name="q1"
              type="text"
            >
          </div>
        </ds-field>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Andre spørsmål
          </label>
          <div>
            <input
              aria-invalid="false"
              id="<removed>"
              name="q2"
              type="text"
            >
          </div>
        </ds-field>
        <div>
          <button
            data-variant="secondary"
            type="button"
          >
            Neste
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Grouping 1`] = `
<div data-size="auto">
  <div>
    <details
      data-active-step-label="Første steg"
      data-state="idle"
      open
    >
      <summary>
        <span>
          Seksjon
        </span>
      </summary>
      <button
        aria-current="step"
        data-state="active"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
    </details>
  </div>
</div>
`;

exports[`Long Step Names 1`] = `
<div data-size="auto">
  <div style="width: 200px;">
    <details
      data-active-step-label="Bygg- og anleggsteknikk"
      data-state="idle"
      open
    >
      <summary>
        <span>
          Utdanningsprogram
        </span>
      </summary>
      <button
        aria-current="step"
        data-state="active"
        data-variant="default"
      >
        <div>
        </div>
        Bygg- og anleggsteknikk
      </button>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Elektro og datateknologi
      </button>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Håndverk, design og produktutvikling
      </button>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Naturbruk
      </button>
    </details>
  </div>
</div>
`;

exports[`Preview 1`] = `
<div data-size="auto">
  <div>
    <button
      data-state="idle"
      data-variant="default"
    >
      <div>
      </div>
      Steg
    </button>
    <details
      data-active-step-label="Første steg"
      data-state="idle"
      open
    >
      <summary>
        <span>
          Seksjon
        </span>
      </summary>
      <button
        aria-current="step"
        data-state="active"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
    </details>
  </div>
</div>
`;

exports[`Simple Navigation 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-active-step-label="Steg 1"
        data-state="idle"
        open
      >
        <summary>
          <span>
            Seksjon
          </span>
        </summary>
        <button
          aria-current="step"
          data-state="active"
          data-variant="default"
        >
          <div>
          </div>
          Steg 1
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Steg 2
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Innsending
        </button>
      </details>
    </div>
    <div>
      <h2 data-size="sm">
        Utfylling
      </h2>
      <form>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Steg 1
          </label>
          <div>
            <input
              aria-invalid="false"
              id="<removed>"
              name="step1"
              type="text"
            >
          </div>
        </ds-field>
        <div>
          <button
            data-variant="secondary"
            type="button"
          >
            Neste
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single Step 1`] = `
<div data-size="auto">
  <div>
    <button
      data-state="idle"
      data-variant="default"
    >
      <div>
      </div>
      Steg
    </button>
  </div>
</div>
`;

exports[`States 1`] = `
<div data-size="auto">
  <div>
    <button
      data-state="idle"
      data-variant="info"
    >
      <div>
      </div>
      Infoside
    </button>
    <button
      data-state="completed"
      data-variant="default"
    >
      <div>
      </div>
      Frittstående steg
    </button>
    <button
      aria-invalid="true"
      data-state="invalid"
      data-variant="default"
    >
      <div>
      </div>
      Frittstående steg
    </button>
    <details
      data-state="completed"
      open
    >
      <summary>
        <span>
          Første seksjon
        </span>
      </summary>
      <button
        data-state="idle"
        data-variant="info"
      >
        <div>
        </div>
        Infoside
      </button>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
    </details>
    <details
      data-state="invalid"
      open
    >
      <summary aria-invalid="true">
        <span>
          Andre seksjon
        </span>
      </summary>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        aria-invalid="true"
        data-state="invalid"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
      <button
        aria-invalid="true"
        data-state="invalid"
        data-variant="default"
      >
        <div>
        </div>
        Tredje steg
      </button>
    </details>
    <details
      data-active-step-label="Tredje steg"
      data-state="idle"
      open
    >
      <summary>
        <span>
          Tredje seksjon
        </span>
      </summary>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
      <button
        aria-current="step"
        data-state="active"
        data-variant="default"
      >
        <div>
        </div>
        Tredje steg
      </button>
    </details>
    <button
      data-state="idle"
      data-variant="summary"
    >
      <div>
      </div>
      Oppsummering
    </button>
    <button
      data-state="idle"
      data-variant="submission"
    >
      <div>
      </div>
      Innsending
    </button>
    <button
      data-state="idle"
      data-variant="confirmation"
    >
      <div>
      </div>
      Kvittering
    </button>
  </div>
</div>
`;
